Fixed aggregation toggler button's line wrapping
and moved some ResultsTable CSS to inline styles in the template, rather
than mixing them with other 3X styles.

--- a/gui/client/3x.less
+++ b/gui/client/3x.less
@@ -185,12 +185,6 @@ body > .navbar .brand .icon {
       color: darken(@errorText, 5%);
     }
     th {
-      text-align: left;
-      vertical-align: middle;
-      white-space: nowrap;
-      .icon {
-        vertical-align: text-bottom;
-      }
       &.sorting, &.sorting_asc, &.sorting_desc {
         padding-right: 18px;
       }
